unpackaged/main/default/objects/CMPL123CME__EMDRFDAConfig__c/CMPL123CME__EMDRFDAConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>EMDR FDA Configuration.</description>
    <label>EMDR FDA Config</label>
</CustomObject>