unpackaged/main/default/objects/CMPL123CME__EMDRFDAConfig__c/fields/CMPL123CME__Auth_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Auth_Type__c</fullName>
        <label>Auth Type</label>
        <length>5</length>
        <type>Text</type>
    </CustomField>