unpackaged/main/default/objects/CMPL123CME__EMDRFDAConfig__c/fields/CMPL123CME__Endpoint__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Endpoint__c</fullName>
        <description>TrackWise Digital FDA Service Endpoint URL</description>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>