unpackaged/main/default/objects/CMPL123CME__EMDRFDAConfig__c/fields/CMPL123CME__Is_Active__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is 123 FDA Service active.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </CustomField>