unpackaged/main/default/objects/CMPL123CME__EMDRFDAConfig__c/fields/CMPL123CME__Token__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Token__c</fullName>
        <description>TrackWise Digital FDA Token</description>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>